--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "files.associations": {
-        "inttypes.h": "c"
+        "inttypes.h": "c",
+        "stdio.h": "c",
+        "glad.h": "c",
+        "stdbool.h": "c",
+        "types.h": "c"
     }
 }
